--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       src="https://www.yoons.com/assets/image/a/ci-kr-horizontal.svg" 
       alt="Yoon's Logo" 
     />
-    <h1 class="main-title">AI Writing Tutor</h1>
+    <h1 class="main-title">Yoon's Writing Coach</h1>
 
     <!-- 난이도 선택 영역 -->
     <div class="level-container" style="display: flex; align-items: center; gap: 8px;">
@@ -30,7 +30,7 @@
 
     <!-- 1) Brainstorming -->
     <div class="section">
-      <h2 class="section-title">1. Brainstorming: 글에 대한 아이디어를 함께 생각해요.</h2>
+      <h2 class="section-title">1. Brainstorming: 아이디어를 함께 생각해요.</h2>
       
       <!-- 주제 입력 + 버튼 -->
       <div>
@@ -75,7 +75,7 @@
 
     <!-- 3) First Draft -->
     <div class="section">
-      <h2 class="section-title">3. First Draft: 나만의 아이디어로 자유롭게 글을 써 봐요.</h2>
+      <h2 class="section-title">3. First Draft: 자유롭게 글을 써 봐요.</h2>
 
 
   <!-- 이미지 업로드 버튼 -->
@@ -104,7 +104,7 @@
 
     <!-- 4) Final Draft -->
     <div class="section">
-      <h2 class="section-title">4. Final Draft: 멋진 글을 완성해 봐요.</h2>
+      <h2 class="section-title">4. Final Draft: 멋진 글을 완성하세요.</h2>
   
       
     <!-- 이미지 업로드 버튼 -->
