--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Writing Tutor </title>
+  <title>Writing Wizard </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard/dist/web/static/pretendard.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -16,7 +16,9 @@
       src="https://www.yoons.com/assets/image/a/ci-kr-horizontal.svg" 
       alt="Yoon's Logo" 
     />
-    <h1 class="main-title">Yoon's Writing Coach</h1>
+    <div>
+      <img class="main-title" src="Title.png" alt="Writing Wizard" />
+    </div>
 
     <!-- 난이도 선택 영역 -->
     <div class="level-container" style="display: flex; align-items: center; gap: 8px;">
