--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@
 </div>
 
     </div>
+
+    <footer class = "footer">
+
+    © Yoon's English School. All rights reserved.
+
+    </footer>
+
   </div>  
 
   <script src="script.js"></script>
