--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
   <!-- 초안 텍스트박스 -->
-    <div id="draftText" class="draft-textarea" contenteditable="true"></div>
+    <div id="draftText" class="draft-textarea" contenteditable="plaintext-only"></div>
     <button id="btnDraftFeedback">AI 피드백 생성</button>
 
   <!-- 결과 표시 -->
@@ -124,7 +124,7 @@
 
 
       <!-- 최종 글 텍스트박스  -->
-      <div id="finalText" class="draft-textarea" contenteditable="true"></div>
+      <div id="finalText" class="draft-textarea" contenteditable="plaintext-only"></div>
 
       <!-- 버튼 -->
       <div style="display: flex; gap: 12px; justify-content: space-between; width: 100%; margin-bottom: 12px">
